Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34859

Crash when dragging from a list with QAbstractItemView::InternalMove set loaded by QtUiTools

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.2.1
    • 4.8.6, 5.2.0 RC1
    • Widgets: Itemviews
    • None
    • qttools: 240f4da9bf2f07392470e8e9a2b720a2b11d9ce0

      Using attached uiloader.zip, load the form from QTBUG-30276, start dragging:

      ListModel(0x776720) QMap((0, QVariant(QString, "New Item") ) ( 27 ,  QVariant(QUiTranslatableStringValue, ) ) )  
      QVariant::save: unable to save type 'QUiTranslatableStringValue' (type id: 1028).
      
      ASSERT failure in QVariant::save: "Invalid type to save", file kernel/qvariant.cpp, line 1966
      
      Program received signal SIGABRT, Aborted.
      0x00007ffff5b3c425 in __GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      64      ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory.
      (gdb) where
      #0  0x00007ffff5b3c425 in __GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
      #1  0x00007ffff5b3fb8b in __GI_abort () at abort.c:91
      #2  0x00007ffff64857a2 in qt_message_fatal (context=..., message=...) at global/qlogging.cpp:979
      #3  0x00007ffff64832fa in QMessageLogger::fatal (this=0x7fffffffb6f0, msg=0x7ffff67d70a0 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qlogging.cpp:384
      #4  0x00007ffff647ec7b in qt_assert_x (where=0x7ffff689c98e "QVariant::save", what=0x7ffff689c979 "Invalid type to save", file=0x7ffff689c078 "kernel/qvariant.cpp", line=1966)
          at global/qglobal.cpp:2096
      #5  0x00007ffff6757cde in QVariant::save (this=0x735a90, s=...) at kernel/qvariant.cpp:1966
      #6  0x00007ffff6757d6b in operator<< (s=..., p=...) at kernel/qvariant.cpp:1990
      #7  0x00007ffff66a964f in operator<< <int, QVariant> (out=..., map=...) at ../../include/QtCore/../../src/corelib/io/qdatastream.h:412
      #8  0x00007ffff66a4141 in QAbstractItemModel::encodeData (this=0x776720, indexes=..., stream=...) at itemmodels/qabstractitemmodel.cpp:2446
      #9  0x00007ffff66a318e in QAbstractItemModel::mimeData (this=0x776720, indexes=...) at itemmodels/qabstractitemmodel.cpp:1846
      #10 0x00007ffff78ac3b3 in QListModel::internalMimeData (this=0x776720) at itemviews/qlistwidget.cpp:428
      #11 0x00007ffff78ae7fc in QListWidget::mimeData (this=0x7650d0) at itemviews/qlistwidget.cpp:1789
      #12 0x00007ffff78ac498 in QListModel::mimeData (this=0x776720, indexes=...) at itemviews/qlistwidget.cpp:439
      #13 0x00007ffff784766e in QAbstractItemView::startDrag (this=0x7650d0, supportedActions=...) at itemviews/qabstractitemview.cpp:3584
      #14 0x00007ffff7862365 in QListView::startDrag (this=0x7650d0, supportedActions=...) at itemviews/qlistview.cpp:893
      #15 0x00007ffff784037e in QAbstractItemView::mouseMoveEvent (this=0x7650d0, event=0x7fffffffcbb0) at itemviews/qabstractitemview.cpp:1770
      #16 0x00007ffff7861cd6 in QListView::mouseMoveEvent (this=0x7650d0, e=0x7fffffffcbb0) at itemviews/qlistview.cpp:781
      #17 0x00007ffff75d6749 in QWidget::event (this=0x7650d0, event=0x7fffffffcbb0) at kernel/qwidget.cpp:7939
      #18 0x00007ffff7704bb3 in QFrame::event (this=0x7650d0, e=0x7fffffffcbb0) at widgets/qframe.cpp:534
      #19 0x00007ffff77a1c29 in QAbstractScrollArea::viewportEvent (this=0x7650d0, e=0x7fffffffcbb0) at widgets/qabstractscrollarea.cpp:1184
      #20 0x00007ffff783fbad in QAbstractItemView::viewportEvent (this=0x7650d0, event=0x7fffffffcbb0) at itemviews/qabstractitemview.cpp:1689
      #21 0x00007ffff77a2def in QAbstractScrollAreaPrivate::viewportEvent (this=0x7b4ad0, event=0x7fffffffcbb0) at widgets/qabstractscrollarea_p.h:109
      #22 0x00007ffff77a2eb6 in QAbstractScrollAreaFilter::eventFilter (this=0x73a930, o=0x755d60, e=0x7fffffffcbb0) at widgets/qabstractscrollarea_p.h:125
      #23 0x00007ffff670139a in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x6c5010, receiver=0x755d60, event=0x7fffffffcbb0) at kernel/qcoreapplication.cpp:974
      #24 0x00007ffff758c65f in QApplicationPrivate::notify_helper (this=0x6c5010, receiver=0x755d60, e=0x7fffffffcbb0) at kernel/qapplication.cpp:3463
      #25 0x00007ffff758a404 in QApplication::notify (this=0x7fffffffdc30, receiver=0x755d60, e=0x7fffffffcbb0) at kernel/qapplication.cpp:3001
      #26 0x00007ffff670103c in QCoreApplication::notifyInternal (this=0x7fffffffdc30, receiver=0x755d60, event=0x7fffffffcbb0) at kernel/qcoreapplication.cpp:878
      #27 0x00007ffff758eb65 in QCoreApplication::sendSpontaneousEvent (receiver=0x755d60, event=0x7fffffffcbb0)
          at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:235
      #28 0x00007ffff7588e65 in QApplicationPrivate::sendMouseEvent (receiver=0x755d60, event=0x7fffffffcbb0, alienWidget=0x755d60, nativeWidget=0x72a650, buttonDown=0x7ffff7dd9610, 
          lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2488
      #29 0x00007ffff76027db in QWidgetWindow::handleMouseEvent (this=0x71b3e0, event=0x7fffffffd660) at kernel/qwidgetwindow.cpp:485
      #30 0x00007ffff76017a3 in QWidgetWindow::event (this=0x71b3e0, event=0x7fffffffd660) at kernel/qwidgetwindow.cpp:172
      #31 0x00007ffff758c688 in QApplicationPrivate::notify_helper (this=0x6c5010, receiver=0x71b3e0, e=0x7fffffffd660) at kernel/qapplication.cpp:3467
      #32 0x00007ffff7589c91 in QApplication::notify (this=0x7fffffffdc30, receiver=0x71b3e0, e=0x7fffffffd660) at kernel/qapplication.cpp:2888
      #33 0x00007ffff670103c in QCoreApplication::notifyInternal (this=0x7fffffffdc30, receiver=0x71b3e0, event=0x7fffffffd660) at kernel/qcoreapplication.cpp:878
      #34 0x00007ffff6d19249 in QCoreApplication::sendSpontaneousEvent (receiver=0x71b3e0, event=0x7fffffffd660)
          at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:235
      #35 0x00007ffff6d136b9 in QGuiApplicationPrivate::processMouseEvent (e=0x7687b0) at kernel/qguiapplication.cpp:1585
      #36 0x00007ffff6d12dca in QGuiApplicationPrivate::processWindowSystemEvent (e=0x7687b0) at kernel/qguiapplication.cpp:1398
      #37 0x00007ffff6cfde1d in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:575
      #38 0x00007ffff12579cb in QUnixEventDispatcherQPA::processEvents (this=0x70d5a0, flags=...) at eventdispatchers/qunixeventdispatcher.cpp:71
      #39 0x00007ffff66fdc48 in QEventLoop::processEvents (this=0x7fffffffdad0, flags=...) at kernel/qeventloop.cpp:136
      #40 0x00007ffff66fdf21 in QEventLoop::exec (this=0x7fffffffdad0, flags=...) at kernel/qeventloop.cpp:212
      #41 0x00007ffff67016f4 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1131
      #42 0x00007ffff6d12b6e in QGuiApplication::exec () at kernel/qguiapplication.cpp:1332
      #43 0x00007ffff7589557 in QApplication::exec () at kernel/qapplication.cpp:2692
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes