QUiLoader: Provide operators for streaming QUiTranslatableStringValue.

When trying to encode mime data in startDrag(), the code
hits the internal item data storing the untranslated text
attached by QUiLoader and triggers an assert as they cannot be
serialized to QDataStream. Add the missing operators.

Task-number: QTBUG-34859
Change-Id: I87a0f59fb42772bf08039915bc7418940ca5a80f
Reviewed-by: hjk <hjk121@nokiamail.com>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>